--- a/package.json
+++ b/package.json
@@ -19,16 +19,18 @@
     "@angular/platform-browser": "2.4.8",
     "@angular/platform-browser-dynamic": "2.4.8",
     "@angular/platform-server": "2.4.8",
+    "@ionic-native/core": "3.1.0",
+    "@ionic-native/splash-screen": "3.1.0",
+    "@ionic-native/status-bar": "3.1.0",
     "@ionic/storage": "2.0.0",
-    "ionic-angular": "2.2.0",
-    "ionic-native": "2.4.1",
+    "ionic-angular": "2.3.0",
     "ionicons": "3.0.0",
     "rxjs": "5.0.1",
     "sw-toolbox": "3.4.0",
     "zone.js": "0.7.2"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "1.1.4",
+    "@ionic/app-scripts": "1.2.2",
     "typescript": "2.0.9"
   },
   "cordovaPlugins": [
@@ -47,5 +49,5 @@
       "locator": "ios"
     }
   ],
-  "description": "stock-market-app: An Ionic project"
+  "description": "app: An Ionic project"
 }
